[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"
default-run = "day3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
color-eyre = "0.6.2"
nom = "7.1.3"
camino = "1.1.6"
indexmap = "2.0.0"
id_tree = "1.8.0"
md5 = "0.7.0"
serde = "1.0.193"
serde_json = "1.0.108"

[[bin]]
name = "day1"
path = "bin/day1/main.rs"

[[bin]]
name = "day2"
path = "bin/day2/main.rs"

[[bin]]
name = "day3"
path = "bin/day3/main.rs"

[[bin]]
name = "day4"
path = "bin/day4/main.rs"

[[bin]]
name = "day5"
path = "bin/day5/main.rs"

[[bin]]
name = "day6"
path = "bin/day6/main.rs"

[[bin]]
name = "day7"
path = "bin/day7/main.rs"

[[bin]]
name = "day8"
path = "bin/day8/main.rs"

[[bin]]
name = "day9"
path = "bin/day9/main.rs"

[[bin]]
name = "day10"
path = "bin/day10/main.rs"

[[bin]]
name = "day11"
path = "bin/day11/main.rs"

[[bin]]
name = "day12"
path = "bin/day12/main.rs"

[[bin]]
name = "day13"
path = "bin/day13/main.rs"

[[bin]]
name = "day14"
path = "bin/day14/main.rs"

[[bin]]
name = "day15"
path = "bin/day15/main.rs"

[[bin]]
name = "day16"
path = "bin/day16/main.rs"

[[bin]]
name = "day17"
path = "bin/day17/main.rs"

[[bin]]
name = "day18"
path = "bin/day18/main.rs"

[dev-dependencies]
test-case = "3.2.1"
